<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="168dp"
    android:background="@color/colorPrimary"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_icon_feather_camera"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/take_photo"
            android:textColor="@color/colorTextLight"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/choose_galery"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_icon_material_insert_photo"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/add_from_galery"
            android:textColor="@color/colorTextLight"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/choose_icon"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_icon_material_mood"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/choose_existing_icon"
            android:textColor="@color/colorTextLight"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

</LinearLayout>