<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Home">


    <ImageView
        android:id="@+id/iVHomeEvents"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/radius_shape"
        android:contentDescription="@string/events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:5"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintVertical_bias="0.503" />

    <ImageView
        android:id="@+id/iVHomeGeneral"
        android:layout_width="150dp"
        android:layout_height="48dp"

        android:background="@drawable/radius_shape"
        android:contentDescription="@string/general"
        app:layout_constraintEnd_toStartOf="@+id/iVHomeEvents"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toTopOf="@+id/iVHomeEvents" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <ImageView
            android:id="@+id/iVHomeHallway"
            android:layout_width="68dp"
            android:layout_height="166dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/hallway"
            app:layout_constraintEnd_toStartOf="@+id/iVHomeSleeping"
            app:layout_constraintTop_toBottomOf="@+id/iVHomeLiving" />

        <ImageView
            android:id="@+id/iVHomeHallwayHelper"
            android:layout_width="43dp"
            android:layout_height="106dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/hallway"
            app:layout_constraintStart_toStartOf="@+id/iVHomeHallway"
            app:layout_constraintTop_toTopOf="@+id/iVHomeHallway"
            app:srcCompat="@drawable/ic_flur_grundriss_s" />

        <ImageView
            android:id="@+id/iVHomeSleeping"
            android:layout_width="116dp"
            android:layout_height="245dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/sleeping"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iVHomeKitchen"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iVHomeKitchen"
            app:layout_constraintTop_toBottomOf="@+id/iVHomeKitchen"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_schlafzimmer_grundriss_v2" />


        <ImageView
            android:id="@+id/iVHomeBath"
            android:layout_width="127dp"
            android:layout_height="166dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/bath"
            app:layout_constraintBottom_toBottomOf="@+id/iVHomeHallway"
            app:layout_constraintEnd_toStartOf="@+id/iVHomeHallway"
            app:layout_constraintTop_toBottomOf="@+id/iVHomeLiving"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_badezimmer_grundriss_v2" />

        <ImageView
            android:id="@+id/iVHomeKitchen"
            android:layout_width="117dp"
            android:layout_height="169dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/kitchen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/iVHomeLiving"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_kueche_grundriss_s" />

        <ImageView
            android:id="@+id/iVHomeLiving"
            android:layout_width="200dp"
            android:layout_height="248dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/living"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iVHomeKitchen"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_wohnzimmer_grundriss_s" />

        <TextView
            android:id="@+id/tVHomeLiving"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/event_iconmargin"
            android:layout_marginBottom="@dimen/event_iconmargin"
            android:background="@color/colorPrimary"
            android:text="@string/living"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_xs"
            app:layout_constraintBottom_toBottomOf="@+id/iVHomeLiving"
            app:layout_constraintStart_toStartOf="@+id/iVHomeLiving" />

        <TextView
            android:id="@+id/tVHomeKitchen"
            android:layout_width="45dp"
            android:layout_height="21dp"
            android:layout_marginLeft="@dimen/event_iconmargin"
            android:layout_marginBottom="@dimen/event_iconmargin"
            android:background="@color/colorPrimary"
            android:text="@string/kitchen"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_xs"
            app:layout_constraintBottom_toBottomOf="@+id/iVHomeKitchen"
            app:layout_constraintStart_toStartOf="@+id/iVHomeKitchen" />

        <TextView
            android:id="@+id/tVHomeHallway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="@dimen/event_iconmargin"
            android:layout_marginBottom="@dimen/event_iconmargin"
            android:background="@color/colorPrimary"
            android:text="@string/hallway"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_xs"
            app:layout_constraintBottom_toBottomOf="@+id/iVHomeHallway"
            app:layout_constraintStart_toStartOf="@+id/iVHomeHallway" />

        <TextView
            android:id="@+id/tVHomeSleeping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="@dimen/event_iconmargin"
            android:layout_marginBottom="@dimen/event_iconmargin"
            android:background="@color/colorPrimary"
            android:text="@string/sleeping"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_xs"
            app:layout_constraintBottom_toBottomOf="@+id/iVHomeSleeping"
            app:layout_constraintStart_toStartOf="@+id/iVHomeSleeping" />

        <TextView
            android:id="@+id/tVHomeBath"
            android:layout_width="27dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="@dimen/event_iconmargin"
            android:layout_marginBottom="@dimen/event_iconmargin"
            android:background="@color/colorPrimary"
            android:text="@string/bath"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_xs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tVHomeGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/textSize_xs"
        app:layout_constraintBottom_toBottomOf="@+id/iVHomeGeneral"
        app:layout_constraintEnd_toEndOf="@+id/iVHomeGeneral"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="@+id/iVHomeGeneral"
        app:layout_constraintTop_toTopOf="@+id/iVHomeGeneral" />

    <TextView
        android:id="@+id/tVHomeEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/textSize_xs"
        app:layout_constraintBottom_toBottomOf="@+id/iVHomeEvents"
        app:layout_constraintEnd_toEndOf="@+id/iVHomeEvents"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/iVHomeEvents"
        app:layout_constraintTop_toTopOf="@+id/iVHomeEvents" />

    <ImageView
        android:id="@+id/iVHomeSettings"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:contentDescription="@string/settings"
        android:tint="@color/colorTextLight"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
        app:layout_constraintTop_toTopOf="@+id/iVHomeLogo"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/tVHomeSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_life"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize_xs"
        app:layout_constraintStart_toStartOf="@+id/iVHomeLogo"
        app:layout_constraintTop_toBottomOf="@+id/iVHomeLogo" />

    <ImageView
        android:id="@+id/iVHomeLogo"
        android:layout_width="71dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/home" />

</androidx.constraintlayout.widget.ConstraintLayout>