<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event_Fragment_Temperature"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tVEventsThermostat_Cancel"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/text_marginleft"
        android:layout_marginTop="@dimen/text_marginleft"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVEventsThermostat_Save"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/text_marginleft"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/text_marginleft"
        android:text="@string/safe"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_functions"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tVFTermostat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_marginleft"
            android:text="@string/thermo"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sFTermostat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="#D9EEEE"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_add_fragment_height"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <ImageView
            android:id="@+id/iVThermostatSettingBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.sophiafema.home_easylife.view.TemperaturePicker
            android:id="@+id/pFTermostat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>