<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Event_Fragment_Light"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:id="@+id/tVEventsLight_CancelBath"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="@dimen/text_marginleft"
        android:layout_marginTop="@dimen/text_marginleft"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVEventsLight_SaveBath"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/text_marginleft"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="@dimen/text_marginleft"
        android:text="@string/safe"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iVEvents_Add_Function_Light"
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_functions"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tVEvents_AddLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_marginleft"
            android:text="@string/light"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/textSize_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sFLightBath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="#D9EEEE"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collection"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iVEvents_Add_Function_Light">

        <ImageView
            android:id="@+id/iVLightSettingBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iVFLightBath"
            android:layout_width="66dp"
            android:layout_height="64dp"
            android:src="@android:drawable/ic_menu_crop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>